# casesvc/src/main/java/uk/gov/ons/ctp/response/casesvc/endpoint/CaseEndpoint.java
@@ -6,10 +6,11 @@ import javax.inject.Inject;
 import javax.validation.Valid;
 import javax.ws.rs.GET;
 import javax.ws.rs.POST;
+import javax.ws.rs.PUT;
 import javax.ws.rs.Path;
 import javax.ws.rs.PathParam;
 import javax.ws.rs.Produces;
-import javax.ws.rs.QueryParam;
+import javax.ws.rs.core.Response;
 
 import org.springframework.util.CollectionUtils;
 
@@ -19,8 +20,10 @@ import uk.gov.ons.ctp.common.endpoint.CTPEndpoint;
 import uk.gov.ons.ctp.common.error.CTPException;
 import uk.gov.ons.ctp.response.casesvc.domain.model.Case;
 import uk.gov.ons.ctp.response.casesvc.domain.model.CaseEvent;
+import uk.gov.ons.ctp.response.casesvc.domain.model.CaseGroup;
 import uk.gov.ons.ctp.response.casesvc.representation.CaseDTO;
 import uk.gov.ons.ctp.response.casesvc.representation.CaseEventDTO;
+import uk.gov.ons.ctp.response.casesvc.service.CaseGroupService;
 import uk.gov.ons.ctp.response.casesvc.service.CaseService;
 
 /**
@@ -32,6 +35,10 @@ import uk.gov.ons.ctp.response.casesvc.service.CaseService;
 public final class CaseEndpoint implements CTPEndpoint {
 
   public static final String ERRORMSG_CASENOTFOUND = "Case not found for";
+  public static final String ERRORMSG_CASEGROUPNOTFOUND = "CaseGroup not found for";
+
+  @Inject
+  private CaseGroupService caseGroupService;
 
   @Inject
   private CaseService caseService;
@@ -39,44 +46,6 @@ public final class CaseEndpoint implements CTPEndpoint {
   @Inject
   private MapperFacade mapperFacade;
 
-  /**
-   * the GET endpoint to find Cases by postcode
-   *
-   * @param uprn to find by
-   * @return the cases found
-   * @throws CTPException something went wrong
-   */
-  @GET
-  @Path("/uprn/{uprn}")
-  public List<CaseDTO> findCasesByUprn(@PathParam("uprn") final Long uprn)  throws CTPException {
-    log.debug("Entering findCasesByUprn with {}", uprn);
-    List<Case> cases = caseService.findCasesByUprn(uprn);
-    if (org.apache.commons.collections.CollectionUtils.isEmpty(cases)) {
-      throw new CTPException(CTPException.Fault.RESOURCE_NOT_FOUND,
-              String.format("%s UPRN %s", ERRORMSG_CASENOTFOUND, uprn));
-    }
-    List<CaseDTO> caseDTOs = mapperFacade.mapAsList(cases, CaseDTO.class);
-    return CollectionUtils.isEmpty(caseDTOs) ? null : caseDTOs;
-  }
-
-  /**
-   * the GET endpoint to find a Case by questionnaire id
-   *
-   * @param qid to find by
-   * @return the case found
-   * @throws CTPException something went wrong
-   */
-  @GET
-  @Path("/questionnaire/{qid}")
-  public CaseDTO findCaseByQuestionnaireId(@PathParam("qid") final Integer qid) throws CTPException {
-    log.debug("Entering findCaseByQuestionnaireId with {}", qid);
-    Case caseObj = caseService.findCaseByQuestionnaireId(qid);
-    if (caseObj == null) {
-      throw new CTPException(CTPException.Fault.RESOURCE_NOT_FOUND,
-              String.format("%s questionnaire id %s", ERRORMSG_CASENOTFOUND, qid));
-    }
-    return mapperFacade.map(caseObj, CaseDTO.class);
-  }
 
   /**
    * the GET endpoint to find a Case by id
@@ -96,27 +65,25 @@ public final class CaseEndpoint implements CTPEndpoint {
     }
     return mapperFacade.map(caseObj, CaseDTO.class);
   }
-
   /**
-   * The GET endpoint to find case events by state and actionplanid. Note that
-   * this has been replaced by the Case.Notification queue mechanism to notify
-   * the Action service of case life cycle events. Has been left in place
-   * pending implementation of recovery functionality if Case and Action service
-   * state gets out of synchronisation.
+   * the GET endpoint to find case events by case id
    *
-   * @param states the case states to find by
-   * @param actionPlanId the id of the action plan to find by
-   * @return the cases found
+   * @param caseId to find by
+   * @return the case events found
    * @throws CTPException something went wrong
    */
   @GET
-  @Path("/actionplan/{actionplanid}")
-  public List<Integer> findCaseIdsByStateAndActionPlan(
-      @QueryParam("state") final List<CaseDTO.CaseState> states,
-      @PathParam("actionplanid") final Integer actionPlanId) {
-    log.debug("Entering findCasesByStateAndActionPlan with {} and {}", states, actionPlanId);
-    List<Integer> caseIds = caseService.findCaseIdsByStatesAndActionPlanId(states, actionPlanId);
-    return CollectionUtils.isEmpty(caseIds) ? null : caseIds;
+  @Path("/casegroup/{caseGroupId}")
+  public List<CaseDTO> findCasesInCaseGroup(@PathParam("caseGroupId") final Integer caseGroupId) throws CTPException {
+    log.debug("Entering findCasesInCaseGroup with {}", caseGroupId);
+    CaseGroup caseGroup = caseGroupService.findCaseGroupByCaseGroupId(caseGroupId);
+    if (caseGroup == null) {
+      throw new CTPException(CTPException.Fault.RESOURCE_NOT_FOUND,
+              String.format("%s casegroup id %s", ERRORMSG_CASEGROUPNOTFOUND, caseGroupId));
+    }
+    List<Case> cases = caseService.findCasesByCaseGroupId(caseGroupId);
+    List<CaseDTO> caseDTOs = mapperFacade.mapAsList(cases, CaseDTO.class);
+    return CollectionUtils.isEmpty(caseDTOs) ? null : caseDTOs;
   }
 
   /**
@@ -162,5 +129,26 @@ public final class CaseEndpoint implements CTPEndpoint {
               String.format("%s case id %s", ERRORMSG_CASENOTFOUND, caseId));
     }
     return mapperFacade.map(createdCaseEvent, CaseEventDTO.class);
+  }
+  
+  /**
+   * Web service to update a Case to record a response
+   * has been received in the Survey Data Exchange.
+   *
+   * @param caseRef of response received
+   * @return javax.ws.rs.core.Response with 200 OK on success
+   * @throws CTPException on operation failure
+   */
+  @PUT
+  @Path("/caseref/{caseref}/response")
+  //XXX needs channel? from sdxg
+  public Response responseOperation(@PathParam("caseRef") final String caseRef) throws CTPException {
+    log.debug("Entering responseOperation with {}", caseRef);
+    Case caze = caseService.recordResponse(caseRef);
+    if (caze == null) {
+      throw new CTPException(CTPException.Fault.RESOURCE_NOT_FOUND,
+              String.format("%s caseref %s", ERRORMSG_CASENOTFOUND, caseRef));
+    }
+    return Response.status(Response.Status.NO_CONTENT).build();
   }
 }
